feat: add token validation
