# cmd/api/feeds.go
@@ -21,6 +21,7 @@ import (
 //	@Success		200		{object}	[]store.PostWithMetadata
 //	@Failure		400		{object}	error
 //	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
 //	@Router			/users/feed [get]
 func (app *application) getFeedHandler(w http.ResponseWriter, r *http.Request) {
 
